--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <span>Twitter</span></a></li>
             <li><a href="https://emblemsmusic.bandcamp.com/" target="_blank" title="Bandcamp">
                 <img src="./volume-2.svg" />
-                <span>Band Camp</span></a></li>
+                <span>Bandcamp</span></a></li>
             <li><a href="https://soundcloud.com/emblemsmusic" target="_blank" title="SoundCloud">
                 <img src="./cloud.svg" />
                 <span>SoundCloud</span></a></li>
