--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
   <title>EMBLEMS MUSIC</title>
   <meta name="description" content="Emblems Music">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather|Playfair+Display" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+  <meta property="og:title" content="EMBLEMS MUSIC" />
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:image" content="http://emblemsmusic.com/emblems-background.jpg" />
+  <meta name="description " content="Emblems was started by Matthew Stevens. Song structures took on a folk inspired feel in the early stages before the band grew into its own blend of somber rock. Emblems is Ian O'Brien, AJ Griffith, Zig Sun Oo, and MatthewStevens." />
   <link rel="stylesheet" href="./styles.css">
 </head>
 
