--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
       </div>
     </div>
-    <p class="small">Proudly endorsed by <a href="https://cusackmusic.com/" title="Cusack Music" target="_blank">Cusack Music</a></p>
+    <p class="small">Endorsed by <a href="https://cusackmusic.com/" title="Cusack Music" target="_blank">Cusack Music</a></p>
   </div>
   <script src="./index.js"></script>
 </body>
