--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <img src="./twitter.svg" />
                 <span>Twitter</span></a></li>
             <li><a href="https://emblemsmusic.bandcamp.com/" target="_blank" title="Bandcamp">
-                <img src="./volume-2.svg" />
+                <img src="./volume.svg" />
                 <span>Bandcamp</span></a></li>
             <li><a href="https://soundcloud.com/emblemsmusic" target="_blank" title="SoundCloud">
                 <img src="./cloud.svg" />
