--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-  <img src="./emblems-background.jpg" />
+  <img src="./Emblems-background.jpg" />
   <div class="table">
     <div>
       <div>
