--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:title" content="EMBLEMS" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:image" content="http://emblemsmusic.com/Emblems-background.jpg" />
-  <meta name="description " content="Emblems was started by Matthew Stevens. Song structures took on a folk inspired feel in the early stages before the band grew into its own blend of somber rock. Emblems is Ian O'Brien, AJ Griffith, Zig Sun Oo, and MatthewStevens." />
+  <meta name="description " content="Emblems was started by Matthew Stevens. Song structures took on a folk inspired feel in the early stages before the band grew into its own blend of somber rock. Emblems is Ian O'Brien, AJ Griffith, and Matthew Stevens." />
   <link rel="stylesheet" href="./styles.css">
 </head>
 
