--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
   <title>EMBLEMS</title>
   <meta name="description" content="Emblems Music">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <meta property="og:title" content="EMBLEMS" />
   <meta property="og:locale" content="en_US" />
-  <meta property="og:image" content="http://emblemsmusic.com/Emblems-background.jpg" />
-  <meta name="description " content="Emblems was started by Matthew Stevens. Song structures took on a folk inspired feel in the early stages before the band grew into its own blend of somber rock. Emblems is Ian O'Brien, AJ Griffith, and Matthew Stevens." />
+  <meta property="og:image" content="http://emblemsmusic.com/Emblems-Background.jpg" />
+  <meta name="description " content="Emblems was started by Matthew Stevens and grew into its own blend of somber rock. Emblems is Ian O'Brien, AJ Griffith, Jared Cummans, and Matthew Stevens." />
   <link rel="stylesheet" href="./styles.css">
 </head>
 
