--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>EMBLEMS</title>
-  <meta name="description" content="Emblems Music">
+  <meta name="description" content="Emblems">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <meta property="og:title" content="EMBLEMS" />
+  <meta property="og:title" content="emblems" />
   <meta property="og:locale" content="en_US" />
-  <meta property="og:image" content="http://emblemsmusic.com/Emblems-Background.jpg" />
+  <meta property="og:image" content="http://emblemsmusic.com/Emblems-6:22-Background.jpg" />
   <meta name="description " content="Emblems was started by Matthew Stevens and grew into its own blend of somber rock. Emblems is Ian O'Brien, AJ Griffith, Jared Cummans, and Matthew Stevens." />
   <link rel="stylesheet" href="./styles.css">
 </head>
