--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>EMBLEMS</title>
-  <meta name="description" content="Emblems">
+  <meta name="description" content="Emblems Music">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <meta property="og:title" content="emblems" />
@@ -41,6 +41,9 @@
                 <img src="./twitter.svg" />
                 <span>Twitter</span></a></li>
             <li><a href="https://emblemsmusic.bandcamp.com/" target="_blank" title="Bandcamp">
+                <img src="./volume.svg" />
+                <span>Bandcamp</span></a></li>
+             <li><a href="spotify:artist:22a2rglAwE9NmkmB1cBytN/" target="_blank" title="Spotify">
                 <img src="./volume.svg" />
                 <span>Bandcamp</span></a></li>
             <li><a href="https://soundcloud.com/emblemsmusic" target="_blank" title="SoundCloud">
