--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <img src="./volume.svg" />
                 <span>Bandcamp</span></a></li>
              <li><a href="spotify:artist:22a2rglAwE9NmkmB1cBytN/" target="_blank" title="Spotify">
-                <img src="./volume.svg" />
-                <span>Bandcamp</span></a></li>
+                <img src="./Spotify_logo_without_text.svg" />
+                <span>Spotify</span></a></li>
             <li><a href="https://soundcloud.com/emblemsmusic" target="_blank" title="SoundCloud">
                 <img src="./cloud.svg" />
                 <span>SoundCloud</span></a></li>
