--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Emblems</title>
   <meta name="description" content="Emblems Music">
-  <meta name="viewport" content="width=device-width, initial-scale=0">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.gstatic.com/s/montserrat/v14/JTUSjIg1_i6t8kCHKm459WRhyyTh89ZNpQ.woff2" rel="stylesheet">
   <meta property="og:title" content="emblems" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:image" content="http://emblemsmusic.com/Emblems-6:22-Background.jpg" />
