--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
             <li><a href="https://emblemsmusic.bandcamp.com/" target="_blank" title="Bandcamp">
                 <img src="./volume.svg" />
                 <span>Bandcamp</span></a></li>
+            <li><a href="https://www.songkick.com/artists/2746691-emblems/calendar/" target="_blank" title="Shows">
+                <img src="./volume.svg" />
+                <span>Bandcamp</span></a></li>
           </ul>
         </div>
       </div>
