--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <span>Bandcamp</span></a></li>
             <li><a href="https://www.songkick.com/artists/2746691-emblems/calendar/" target="_blank" title="Shows">
                 <img src="./volume.svg" />
-                <span>Bandcamp</span></a></li>
+                <span>Songkick</span></a></li>
           </ul>
         </div>
       </div>
