--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <img src="./volume.svg" />
                 <span>Bandcamp</span></a></li>
             <li><a href="https://www.songkick.com/artists/2746691-emblems/calendar/" target="_blank" title="Shows">
-                <img src="./volume.svg" />
+                <img src="./cloud.svg" />
                 <span>Songkick</span></a></li>
           </ul>
         </div>
