--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             <li><a href="https://www.songkick.com/artists/2746691-emblems/calendar/" target="_blank" title="Shows">
                 <img src="./cloud.svg" />
                 <span>Songkick</span></a></li>
+            <a href="https://www.songkick.com/artists/2746691" class="songkick-widget" data-theme="light" data-other-artists="on" data-track-button="on" data-detect-style="true" data-background-color="transparent" data-locale="en">Emblems tour dates</a>
+<script src="//widget.songkick.com/2746691/widget.js"></script>
           </ul>
         </div>
       </div>
