--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li><a href="https://emblemsmusic.bandcamp.com/" target="_blank" title="Bandcamp">
                 <img src="./volume.svg" />
                 <span>Bandcamp</span></a></li>
-            <a href="https://www.songkick.com/artists/2746691" class="songkick-widget" data-theme="light" data-other-artists="on" data-track-button="on" data-detect-style="true" data-background-color="transparent" data-locale="en">Emblems tour dates</a>
+            <a href="https://www.songkick.com/artists/2746691" class="songkick-widget" data-theme="light" data-detect-style="true" data-background-color="transparent" data-locale="en">Emblems shows</a>
 <script src="//widget.songkick.com/2746691/widget.js"></script>
           </ul>
         </div>
