--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+      <p class="browsehappy">We are glad you are here <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
   <img src="./Emblems-6:22-Background.jpg" />
   <div class="table">
@@ -40,11 +40,11 @@
             <li><a href="https://twitter.com/emblemsmusic" target="_blank" title="Twitter">
                 <img src="./twitter.svg" />
                 <span>Twitter</span></a></li>
-            <li><a href="https://emblemsmusic.bandcamp.com/" target="_blank" title="Bandcamp">
-                <img src="./volume.svg" />
-                <span>Bandcamp</span></a></li>
           <a href="https://www.songkick.com/artists/2746691" class="songkick-widget" data-theme="light" data-detect-style="true" data-background-color="transparent" data-locale="en">Shows</a>
 <script src="//widget.songkick.com/2746691/widget.js"></script>
+             <li><a href="https://emblemsmusic.bandcamp.com/" target="_blank" title="Bandcamp">
+                <img src="./volume.svg" />
+                <span>Bandcamp</span></a></li>
           </ul>
     <p class="small">Endorsed by <a href="https://cusackmusic.com/" title="Cusack Music" target="_blank">Cusack Music</a></p>
   </div>
