--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <div>
           <h1>emblems</h1>
           <ul>
+            <li><a href="https://www.songkick.com/artists/2746691" class="songkick-widget" data-theme="light" data-detect-style="true" data-background-color="transparent" data-locale="en">Shows</a>
+<script src="//widget.songkick.com/2746691/widget.js"></script>
             <li><a href="https://www.facebook.com/EmblemsMusic/" target="_blank" title="Facebook">
                 <img src="./facebook.svg" />
                 <span>Facebook</span></a></li>
@@ -40,8 +42,6 @@
             <li><a href="https://twitter.com/emblemsmusic" target="_blank" title="Twitter">
                 <img src="./twitter.svg" />
                 <span>Twitter</span></a></li>
-          <a href="https://www.songkick.com/artists/2746691" class="songkick-widget" data-theme="light" data-detect-style="true" data-background-color="transparent" data-locale="en">Shows</a>
-<script src="//widget.songkick.com/2746691/widget.js"></script>
              <li><a href="https://emblemsmusic.bandcamp.com/" target="_blank" title="Bandcamp">
                 <img src="./volume.svg" />
                 <span>Bandcamp</span></a></li>
