--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
             <li><a href="https://open.spotify.com/artist/22a2rglAwE9NmkmB1cBytN?si=yiEF0K9VRdKfymRq6JmSiw/" target="_blank" title="Bandcamp">
                 <img src="./spotify-3.svg" />
                 <span>Spotify</span></a></li>
+             <li><a href="https://music.apple.com/us/artist/emblems/167344146/" target="_blank" title=" Music">
+                <img src="./Apple_Music_Icon_blk.svg" />
+                <span> Music</span></a></li>
           <a href="https://www.songkick.com/artists/2746691" class="songkick-widget" data-theme="light" data-other-artists="on" data-detect-style="true" data-background-color="transparent" data-locale="en">Shows</a>
 <script src="//widget.songkick.com/2746691/widget.js"></script>
           </ul>
