--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div>
         <div>
           <h1>emblems</h1>
-          <ul>
+          <ul>p {text-align: center;}
             <li><a href="https://www.facebook.com/EmblemsMusic/" target="_blank" title="Facebook">
                 <img src="./facebook.svg" />
                 <span>Facebook</span></a></li>
