--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
       <div>
         <div>
           <h1>emblems</h1>
-          <ul>p {text-align: center;}
+          <ul>
+           {text-align: center;}
             <li><a href="https://www.facebook.com/EmblemsMusic/" target="_blank" title="Facebook">
                 <img src="./facebook.svg" />
                 <span>Facebook</span></a></li>
@@ -52,6 +53,7 @@
           <a href="https://www.songkick.com/artists/2746691" class="songkick-widget" data-theme="light" data-other-artists="on" data-detect-style="true" data-background-color="transparent" data-locale="en">Shows</a>
 <script src="//widget.songkick.com/2746691/widget.js"></script>
           </ul>
+          {/text-align: center;}
     <p class="small">Endorsed by <a href="https://cusackmusic.com/" title="Cusack Music" target="_blank">Cusack Music</a></p>
   </div>
   <script src="./index.js"></script>
