--- a/index.html
+++ b/index.html
@@ -22,16 +22,15 @@
 
 <body>
   <!--[if lt IE 7]>
-      <p class="browsehappy">We are glad you are here <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+      <p class="browsehappy">Looks like you are using an<strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
   <img src="./Emblems-6:22-Background.jpg" />
   <div class="table">
     <div>
       <div>
         <div>
-          <h1>emblems</h1>
+          <h1>EMBLEMS</h1>
           <ul>
-           {text-align: center;}
             <li><a href="https://www.facebook.com/EmblemsMusic/" target="_blank" title="Facebook">
                 <img src="./facebook.svg" />
                 <span>Facebook</span></a></li>
@@ -53,7 +52,6 @@
           <a href="https://www.songkick.com/artists/2746691" class="songkick-widget" data-theme="light" data-other-artists="on" data-detect-style="true" data-background-color="transparent" data-locale="en">Shows</a>
 <script src="//widget.songkick.com/2746691/widget.js"></script>
           </ul>
-          {/text-align: center;}
     <p class="small">Endorsed by <a href="https://cusackmusic.com/" title="Cusack Music" target="_blank">Cusack Music</a></p>
   </div>
   <script src="./index.js"></script>
