--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <body>
   <!--[if lt IE 7]>
-      <p class="browsehappy">Looks like you are using an<strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+      <p class="browsehappy">Looks like you are using a<strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
   <img src="./Emblems-6:22-Background.jpg" />
   <div class="table">
