--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <img src="./twitter.svg" />
                 <span>Twitter</span></a></li>
              <li><a href="https://emblemsmusic.bandcamp.com/" target="_blank" title="Bandcamp">
-                <img src="./volume.svg" />
+                <img src="./bandcamp.svg" />
                 <span>Bandcamp</span></a></li>
             <li><a href="https://open.spotify.com/artist/22a2rglAwE9NmkmB1cBytN?si=yiEF0K9VRdKfymRq6JmSiw/" target="_blank" title="Bandcamp">
                 <img src="./spotify-3.svg" />
