--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="description" content="Emblems Music">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <meta property="og:title" content="emblems" />
+  <meta property="og:title" content="Emblems" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:image" content="http://emblemsmusic.com/Emblems-6:22-Background.jpg" />
   <meta name="description " content="Emblems was started by Matthew Stevens and grew into its own blend of somber rock. Emblems is Ian O'Brien, AJ Griffith, Jared Cummans, and Matthew Stevens." />
@@ -29,7 +29,7 @@
     <div>
       <div>
         <div>
-          <h1>EMBLEMS</h1>
+          <h2>EMBLEMS</h2>
           <ul>
             <li><a href="https://www.facebook.com/EmblemsMusic/" target="_blank" title="Facebook">
                 <img src="./facebook.svg" />
