--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div>
       <div>
         <div>
-          <h1>emblems</h1>
+          <h1>Emblems</h1>
           <ul>
             <li><a href="https://www.facebook.com/EmblemsMusic/" target="_blank" title="Facebook">
                 <img src="./facebook.svg" />
