--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <title>Emblems</title>
   <meta name="description" content="Emblems Music">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   <meta property="og:title" content="Emblems" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:image" content="http://emblemsmusic.com/Emblems-6:22-Background.jpg" />
